--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -8,7 +8,7 @@
   <div class="breadcrumbs">
     <ol>
       <li><a href="/courses">{{ data['training-provider-name'] }}</a></li>
-      <li><a href="/course">{{ data['subject'] or 'Maths' }}</a></li>
+      <li><a href="/course/{{ subject.slug or '/maths' }}">{{ subject.name or 'Maths' }}</a></li>
     </ol>
   </div>
 
@@ -18,26 +18,26 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/course">
-        {{ macros.textbox('course-website', 'Course website') }}
+      <form action="/course/{{ subject.slug }}" method="post">
+        {{ macros.textbox(subject.slug + '-course-website', 'Course website') }}
 
-        {{ macros.textarea('about-this-course', 'About this course', 7) }}
+        {{ macros.textarea(subject.slug + '-about-this-course', 'About this course', 7) }}
 
-        {% set subject %}
-          About this subject ({{ data['subject'] or 'Maths' }})
+        {% set subjectText %}
+          About this subject ({{ subject.name }})
         {% endset %}
-        {{ macros.textarea('about-this-subject', subject, 7) }}
+        {{ macros.textarea(subject.slug + '-about-this-subject', subjectText, 7) }}
 
-        {{ macros.textarea('training-with-a-disability', 'Training with a disability', 7) }}
+        {{ macros.textarea(subject.slug + '-training-with-a-disability', 'Training with a disability', 7) }}
 
-        {{ macros.textarea('interview-process', 'Interview process', 7) }}
+        {{ macros.textarea(subject.slug + '-interview-process', 'Interview process', 7) }}
 
 
         <div class="add-double-bottom-margin">
           <input type="submit" class="button" value="Save" />
         </div>
 
-        <a href="/course">Cancel changes</a>
+        <a href="/course/{{ subject.slug }}">Cancel changes</a>
       </form>
     </div>
   </div>
