--- a/app/views/onboarding/index.html
+++ b/app/views/onboarding/index.html
@@ -10,7 +10,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/course">
+      <form action="/course/{{ subject.slug }}" method="post">
 
         <h2 class="heading-large">Training provider details</h2>
         {{ macros.textbox('training-provider-name', 'Training provider name', 'The name of your educational institution.') }}
