Add 'details from UCAS' page
A page to show the raw information imported from UCAS, and a summary to indicate how we've combined it.

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -17,29 +17,62 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <dl class="aligned add-double-bottom-margin">
-        <dt>Apply from</dt>
-        <dd>26 October 2017</dd>
-        <dt>Start date</dt>
-        <dd>September 2018</dd>
-        <dt>Study options</dt>
-        <dd>
-          <ul class="multiple-options">
-            <li><a href="#">PGCE with QTS, 1 year full time</a></li>
-            <li><a href="#">PGCE with QTS, 1 year full time with salary</a></li>
-            <li><a href="#">QTS, 1 year full time</a></li>
-            <li><a href="#">QTS, 1 year full time with salary</a></li>
-          </ul>
-        </dd>
-      </dl>
-    </div>
-  </div>
+      <div class="course-parts course-parts--large">
 
-  <div class="grid-row">
-    <div class="column-two-thirds">
-      <ol class="course-parts course-parts--large">
-        <li>
           <ul class="course-parts-items">
+            <li class="course-parts-item">
+              <h3 class="course-part-task">
+                Details from UCAS
+              </h3>
+              <a class="course-part-task-action" href="/course/{{ subject.slug }}/from-ucas">View</a>
+
+              <dl class="course-part-tasks">
+                <div>
+                  <dt class="course-part-label">
+                    UCAS {{ subject.name }} courses found
+                  </dt>
+                  <dd class="course-part-value">
+                    3 courses combined
+                  </dd>
+                </div>
+                <div>
+                  <dt class="course-part-label">
+                    Applications open from
+                  </dt>
+                  <dd class="course-part-value">
+                    26 October 2018
+                  </dd>
+                </div>
+                <div>
+                  <dt class="course-part-label">
+                    Accrediting provider
+                  </dt>
+                  <dd class="course-part-value">
+                    The University of Reading
+                  </dd>
+                </div>
+                <div>
+                  <dt class="course-part-label">
+                    Study options
+                  </dt>
+                  <dd class="course-part-value">
+                    PGCE with QTS, 1 year full time
+                  </dd>
+                </div>
+                <div>
+                  <dt class="course-part-label">
+                    Schools with vacancies
+                  </dt>
+                  <dd class="course-part-value">
+                    <ul class="list list-bullet">
+                      <li>Calthorpe Park School</li>
+                      <li>Court Moor School</li>
+                      <li>Yateley School</li>
+                    </ul>
+                  </dd>
+                </div>
+              </dl>
+            </li>
             <li class="course-parts-item">
               <h3 class="course-part-task">
                 About this course
@@ -178,8 +211,8 @@
               </dl>
             </li>
           </ul>
-        </li>
-      </ol>
+
+      </div>
 
       <a href="#" class="button">Send to DfE</a>
     </div>
