--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -27,7 +27,7 @@
         {% set subjectText %}
           About this subject ({{ subject.name }})
         {% endset %}
-        {{ macros.textarea(subject.slug + '-about-this-subject', subjectText, 7) }}
+        {# macros.textarea(subject.slug + '-about-this-subject', subjectText, 7) #}
 
         {{ macros.textarea(subject.slug + '-training-with-a-disability', 'Training with a disability', 7) }}
 
