--- a/app/views/course/from-ucas.html
+++ b/app/views/course/from-ucas.html
@@ -23,7 +23,7 @@
         Course information that we’ve received from UCAS based on your submissions to them. This information can only be edited within UCAS.
       </p>
 
-      <p>Multiple UCAS courses for the same subject are combined into a single course page with different study options. For example courses with and without salary.</p>
+      <p>Multiple UCAS courses for the same subject are combined into a single subject page with different study options. For example courses with and without salary.</p>
     </div>
   </div>
 
