First pass at guidance for course fields

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -57,6 +57,14 @@ $path: "/public/images/";
   margin-top: $gutter / 2;
 }
 
+.add-margin-for-label {
+  margin-top: 25px;
+}
+
+.add-margin-for-label-with-help {
+  margin-top: 45px;
+}
+
 .form-control-full {
   width: 100%;
 }
