--- a/app/views/course.html
+++ b/app/views/course.html
@@ -91,13 +91,13 @@
               <a class="course-part-task-action" href="/course/{{ subject.slug }}/requirements">Edit</a>
 
               <dl class="course-part-tasks">
-                {{ macros.coursePart(subject.slug + '-qualifications-required', 'Qualifications') }}
+                {{ macros.coursePart(subject.slug + '-qualifications-required', 'Qualifications needed') }}
                 {{ macros.coursePart(subject.slug + '-other-requirements', 'Other requirements') }}
               </dl>
             </li>
             <li class="course-parts-item">
               <h3 class="course-part-task">
-                Qualification options
+                Qualification
               </h3>
               <a class="course-part-task-action" href="/course/{{ subject.slug }}/qualification-options">Edit</a>
               <dl class="course-part-tasks">
@@ -109,7 +109,7 @@
             </li>
             <li class="course-parts-item">
               <h3 class="course-part-task">
-                Salary options
+                Salary
               </h3>
               <a class="course-part-task-action" href="/course/{{ subject.slug }}/salary-options">Edit</a>
               <dl class="course-part-tasks">
