Add details from UCAS design history

--- a/app/views/course/salary-options.html
+++ b/app/views/course/salary-options.html
@@ -31,10 +31,10 @@
         {{ macros.textbox(subject.slug + '-salary', 'Salary', 'Salary in £', 'form-control-xsmall') }}
       </div>
       <div class="column-one-third add-margin-for-label-with-help">
-        <p>It should include:</p>
+        <p>It could include:</p>
         <ul class="list list-bullet">
-          <li>details about the PGCE aspect of the course</li>
-          <li>how your experience changes when choosing a PGCE</li>
+          <li>time spent in the classroom</li>
+          <li>who is best suited to this type of course</li>
         </ul>
       </div>
     </div>
