--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -27,6 +27,13 @@
       <h2 class="heading-large">Exploratory designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/details-from-ucas">Course page showing what’s been imported from UCAS</a>
+      </h3>
+      <p>
+        Indicate the raw information we’ve received from UCAS, begin to explain where this must be edited and how we are handling that information.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/course-with-variants">Course with fields to explain a user’s choice</a>
       </h3>
       <p>
