Add contextual guidance design history

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -27,6 +27,13 @@
       <h2 class="heading-large">Exploratory designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/course-field-guidance">Contextual guidance for course fields</a>
+      </h3>
+      <p>
+        A first pass at providing some guidance for each course field. Starting from the <a href="/history/original-onboarding">original onboarding</a> guidance.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/details-from-ucas">Course page showing what’s been imported from UCAS</a>
       </h3>
       <p>
