Add course previews

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -15,6 +15,10 @@
     {{ subject.name or 'Maths' }} at {{ data['training-provider-name'] }}
   </h1>
 
+  <p>
+    <a href="/preview/{{ subject.slug }}">Preview course</a>
+  </p>
+
   <div class="grid-row">
     <div class="column-two-thirds">
       <div class="course-parts course-parts--large">
