Add screenshots of university view

--- a/app/views/history/simplified-university-view/index.html
+++ b/app/views/history/simplified-university-view/index.html
@@ -4,8 +4,8 @@
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
-<main id="content" role="main">
-  <div class="breadcrumbs">
+<main id="content" role="main design-history">
+  <div class="breadcrumbs dont-print">
     <ol>
       <li><a href="/history">Design history</a></li>
     </ol>
@@ -16,13 +16,13 @@
   
   {{ macros.screenshot('Course', 'course', '/public/images/history/simplified-university-view/thumbnails/02-course.png', '/public/images/history/simplified-university-view/02-course.png', '') }}
   
-  {{ macros.screenshot('About this course', 'about-this-course', '/public/images/history/simplified-university-view/thumbnails/03-about-this-course.png', '/public/images/history/simplified-university-view/03-about-this-course.png', '') }}
+  {{ macros.screenshot('Course details from ucas', 'course-details-from-ucas', '/public/images/history/simplified-university-view/thumbnails/03-course-details-from-ucas.png', '/public/images/history/simplified-university-view/03-course-details-from-ucas.png', '') }}
   
-  {{ macros.screenshot('About this training provider', 'about-this-training-provider', '/public/images/history/simplified-university-view/thumbnails/04-about-this-training-provider.png', '/public/images/history/simplified-university-view/04-about-this-training-provider.png', '') }}
+  {{ macros.screenshot('About this course', 'about-this-course', '/public/images/history/simplified-university-view/thumbnails/04-about-this-course.png', '/public/images/history/simplified-university-view/04-about-this-course.png', '') }}
   
-  {{ macros.screenshot('Course requirements', 'course-requirements', '/public/images/history/simplified-university-view/thumbnails/05-course-requirements.png', '/public/images/history/simplified-university-view/05-course-requirements.png', '') }}
+  {{ macros.screenshot('About this training provider', 'about-this-training-provider', '/public/images/history/simplified-university-view/thumbnails/05-about-this-training-provider.png', '/public/images/history/simplified-university-view/05-about-this-training-provider.png', '') }}
   
-  {{ macros.screenshot('Course details from ucas', 'course-details-from-ucas', '/public/images/history/simplified-university-view/thumbnails/06-course-details-from-ucas.png', '/public/images/history/simplified-university-view/06-course-details-from-ucas.png', '') }}
+  {{ macros.screenshot('Course requirements', 'course-requirements', '/public/images/history/simplified-university-view/thumbnails/06-course-requirements.png', '/public/images/history/simplified-university-view/06-course-requirements.png', '') }}
   
   {{ macros.screenshot('Organisation', 'organisation', '/public/images/history/simplified-university-view/thumbnails/07-organisation.png', '/public/images/history/simplified-university-view/07-organisation.png', '') }}
   
